laurel_sprout: rootdir: Hide Magisk Better
* Some banking apps read the file /proc/net/unix to
find out whether things like Magisk are installed/running.

To prevent that, chmod it 440.
This file isn't needed by any other process when boot is finished.

I've tested this and banking apps that did not work before
and recognized Magisk being installed now don't recognize
that and work just fine.

Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -495,3 +495,7 @@ on property:vendor.dcvs.prop=1
 
 on property:sys.boot_completed=1
     swapon_all /vendor/etc/fstab.qcom 
+
+    # Restrict permissions to socket file 
+    # to hide Magisk & co.
+    chmod 440 /proc/net/unix
