laurel_sprout: overlay: Enable Adaptive Charging
Co-Authored-by: Anushek Prasal <anushekprasal@gmail.com>
Co-Authored-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1018,3 +1018,8 @@ service vendor.contexthub-hal-1-0 /vendor/bin/hw/android.hardware.contexthub@1.0
     user system
     group system
     disabled
+
+on property:vendor.post_boot.parsed=1
+    # Adaptive charging
+    chown system system /sys/class/power_supply/battery/input_suspend
+    chmod 0666 /sys/class/power_supply/battery/input_suspend
