laurel_sprout: XiaomiParts: Adapt for Android S
* Use Theme.SubSettingsBase for theme
* Replace PreferenceActivity with CollapsingToolbarBaseActivity
* Add Titles to prefernce screen
* Remove onOptionsItemSelected and where neccessary move to activity
* Set android:exported true for Doze Tile
* Adapt icon for S

W PackageManager: Failed to parse /system/priv-app/XiaomiParts: /system/priv-app/XiaomiParts/XiaomiParts.apk (at Binary XML file line #119): org.lineageos.settings.device.doze.DozeTileService: Targeting S+ (version 31 and above) requires that an explicit value for android:exported be defined when intent filters are present

Co-Authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Co-Authored-by: Hemant Sachdeva <hemant.evolver@gmail.com>
Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/XiaomiParts/AndroidManifest.xml
+++ b/XiaomiParts/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <application
         android:label="@string/advanced_settings"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.SubSettingsBase">
         <receiver
             android:name=".BootReceiver"
             android:defaultToDeviceProtectedStorage="true"
@@ -61,8 +61,8 @@
                 android:name="com.android.settings.dismiss"
                 android:value="9,13,30" />
             <meta-data
-                android:name="com.android.settings.bg.hint"
-                android:resource="@color/homepage_parts_background" />
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_mi" />
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.homepage" />
@@ -89,6 +89,7 @@
             android:name=".doze.DozeTileService"
             android:icon="@drawable/ic_doze"
             android:label="@string/ambient_display_gestures_title"
+            android:exported="true"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
