--- a/biometrics/android.hardware.biometrics.fingerprint@2.3-service.laurel_sprout.rc
+++ b/biometrics/android.hardware.biometrics.fingerprint@2.3-service.laurel_sprout.rc
@@ -2,6 +2,12 @@ on boot
     chown system system /sys/class/touch/tp_dev/fod_status
     chmod 0644 /sys/class/touch/tp_dev/fod_status
 
+    chmod 0666 /dev/input/event1
+    chown system system /dev/input/event2
+    chmod 0660 /dev/input/event2
+    
+    chown system system /sys/class/drm/card0-DSI-1/disp_param
+    chmod 0700 /sys/class/drm/card0-DSI-1/disp_param
     chown system system /sys/devices/platform/soc/5e00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/disp_param
     chmod 0700 /sys/devices/platform/soc/5e00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/disp_param
 
@@ -9,12 +15,7 @@ on init
     # Goodix fingerprint
     chown system system /dev/goodix_fp
 
-    chown system system /dev/input/event2
-    chmod 0660 /dev/input/event2
-
-service fingerprint-inscreen-1-0 /vendor/bin/hw/vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.xiaomi_laurel_sprout
-    interface vendor.lineage.biometrics.fingerprint.inscreen@1.0::IFingerprintInscreen default
-    class hal
+service fps_hal.laurel_sprout /system/bin/hw/android.hardware.biometrics.fingerprint@2.3-service.laurel_sprout
+    class late_start
     user system
-    group system
-    shutdown critical
+    group system input uhid
