--- a/power-libperfmgr/hidl/android.hardware.power@1.3-service.laurel_sprout-libperfmgr.rc
+++ b/power-libperfmgr/hidl/android.hardware.power@1.3-service.laurel_sprout-libperfmgr.rc
@@ -1,4 +1,4 @@
-service vendor.power-hal-1-3 /vendor/bin/hw/android.hardware.power@1.3-service.pixel-libperfmgr
+service vendor.power-hal-1-3 /vendor/bin/hw/android.hardware.power@1.3-service.laurel_sprout-libperfmgr
     class hal
     user root
     group system
@@ -24,3 +24,6 @@ on property:init.svc.vendor.camera-provider-2-4=restarting && property:vendor.po
 on property:init.svc.vendor.audio-hal-2-0=restarting && property:vendor.powerhal.audio=AUDIO_LOW_LATENCY
     setprop vendor.powerhal.audio ""
     restart vendor.power-hal-1-3
+    
+on property:sys.boot_completed=1
+   restart vendor.power-hal-1-3
